--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>imgEdit jQuery plugin</title>
         <meta charset="utf-8">
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-        <script src="./imgEdit.js"></script>
+        <script src="./src/imgEdit.js"></script>
     </head>
     <body>
         <form action="" method="POST" id="target-form"></form>
